<resources>
    <string name="app_name">Assignment05</string>
    <string name="main_title">Welcome!!</string>
    <string name="button_start">START</string>
    <string name="user_title">Create User Info</string>
    <string name="label_name">Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_role">Role:</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="role_student">Student</string>
    <string name="role_employee">Employee</string>
    <string name="role_other">Other</string>
    <string name="button_next">NEXT</string>
    <string name="profile_title">Profile</string>
    <string name="button_update">UPDATE</string>
    <string name="edit_user_title">Edit User Info</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_submit">SUBMIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>